--- a/Medical/client/src/App.css
+++ b/Medical/client/src/App.css
@@ -2,7 +2,7 @@
 body,
 .pure-g [class*=pure-u] {
   font-family: 'Open Sans', sans-serif;
-  background-color: #F7F9F9;
+  background-color: #b0b3b2;
 }
 
 h1, h2, h3 {
