--- a/Medical/client/src/App.css
+++ b/Medical/client/src/App.css
@@ -1,12 +1,13 @@
 
 body,
 .pure-g [class*=pure-u] {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   background-color: #b0b3b2;
 }
 
 h1, h2, h3 {
-  font-family: 'Oswald', 'Arial Narrow', sans-serif;
+  font-family: 'Montserrat', sans-serif;
+  font-size: bold;
 }
 
 code {
